scriptdir = $(datadir)/docky/helpers/metadata

dist_script_SCRIPTS = \
	banshee_control.py.info \
	deluge_badge.py.info \
	gajim_badge.py.info \
	gtg_menus.py.info \
	liferea_badge.py.info \
	rhythmbox_control.py.info \
	open_terminal_here.py.info \
	pidgin_control.py.info \
	tomboy_menus.py.info \
	zeitgeist_docky.py.info \
	zeitgeist_journal.py.info
