scriptdir = $(datadir)/docky/helpers/metadata

dist_script_DATA = \
	banshee_control.py.info	\
	deluge_badge.py.info	\
	emesene_control.py.info \
	gajim_badge.py.info	\
	gtg_menus.py.info	\
	liferea_badge.py.info	\
	open_terminal_here.py.info	\
	pidgin_control.py.info	\
	rhythmbox_control.py.info	\
	tomboy_menus.py.info	\
	transmission_badge.py.info	\
	tsclient_menus.py.info	\
	zeitgeist_docky.py.info	\
	zeitgeist_journal.py.info
